--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -46,6 +46,7 @@
     "./components/*": [
       "./src/components/*.tsx",
       "./src/components/*.ts"
-    ]
+    ],
+    ".":"./src/index.ts"
   }
 }
