--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -47,6 +48,6 @@
       "./src/components/*.tsx",
       "./src/components/*.ts"
     ],
-    ".":"./src/index.ts"
+    ".": "./src/index.ts"
   }
 }
