--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.9.0",
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@stripe/stripe-js": "^4.4.0",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
