--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
     "@stripe/stripe-js": "^4.4.0",
+    "@tanstack/react-table": "^8.20.5",
     "next": "14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
