--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -16,6 +16,7 @@
     "@prisma/client": "^5.19.0"
   },
   "exports":{
-    "./client": "./src/index.ts"
+    ".": "./src/index.ts",
+    "./types": "./src/types.ts"
   }
 }
