--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,6 +38,7 @@
     "@types/nodemailer": "^6.4.15",
     "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "postcss": "^8.4.41",
