--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "@repo/ui": "workspace:*",
     "@stripe/stripe-js": "^4.4.0",
     "@tanstack/react-table": "^8.20.5",
+    "@uploadthing/react": "^6.7.2",
     "bcryptjs": "^2.4.3",
     "ejs": "^3.1.10",
     "next": "14.2.4",
@@ -24,6 +25,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "uploadthing": "^6.13.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
