--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
     "@hookform/resolvers": "^3.9.0",
+    "@mux/mux-player-react": "^2.9.1",
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
     "@stripe/stripe-js": "^4.4.0",
