--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.4.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@hookform/resolvers": "^3.9.0",
     "@mux/mux-player-react": "^2.9.1",
     "@repo/db": "workspace:*",
