--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-quill": "^2.0.0",
     "uploadthing": "^6.13.2",
     "uuid": "^10.0.0",
     "zod": "^3.23.8"
