--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,7 @@
     "@mux/mux-player-react": "^2.9.1",
     "@repo/db": "workspace:*",
     "@repo/ui": "workspace:*",
+    "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
     "@tanstack/react-table": "^8.20.5",
     "@uploadthing/react": "^6.7.2",
